--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     text-align: center;
     width: 100%;
 }
+h1{
+    font-size:2rem;
+    padding-bottom: 1rem;
+}
 #display{
     font-size: 2rem;
 }
